# AdafruitScorpioSPILedController

./: .gitignore  CMakeLists.txt
deprecated/: adafruit_neopixel_import.cmake  adafruit_neopxl8_import.cmake
include/: Animation.hpp  AnimationManager.hpp  Color.hpp  CustomPackages.hpp  LedStrip.hpp  LedStripConfig.hpp  LedStripsManager.hpp  Logger.hpp  Operations.hpp  Package.hpp  PacketFactory.hpp  SPISlave.hpp  SolidColorAnimation.hpp  StripId.hpp  Utils.hpp
source/: AnimationManager.cpp  CMakeLists.txt  LedStrip.cpp  LedStripsManager.cpp  Logger.cpp  PacketFactory.cpp  SPISlave.cpp  SolidColorAnimation.cpp  main.cpp
